# typestate-examples

./: Card.uml  Cargo.toml  Client.dot  Client.uml  Reader.uml  RingA.uml  RingB.uml
auction/: Cargo.toml  auction.pp.mligo
auction/src/: auction.rs  main.rs
pin/: Cargo.toml
pin/src/: card.rs  main.rs  reader.rs
ring/: Cargo.toml
ring/src/: main.rs
